--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.0",
     "react-transition-group": "^4.4.5",
-    "styled-components": "^6.1.1"
+    "styled-components": "^6.1.1",
+    "webdav": "^5.8.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
